@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-21T08:16:19Z",
-  "count_outdated" : 167,
-  "uniques_outdated" : 141,
+  "timestamp" : "2023-08-22T08:14:06Z",
+  "count_outdated" : 168,
+  "uniques_outdated" : 142,
   "count" : 173,
   "uniques" : 147,
   "clones" : [
-    {
-      "timestamp": "2023-08-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-11T00:00:00Z",
       "count": 1,
