@@ -1,12 +1,7 @@
 {
-  "count": 6,
+  "count": 5,
   "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2023-08-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2023-08-11T00:00:00Z",
       "count": 1,
